# SLCore

./: Generate.bat  Linux_Generate.sh  README.md
DevOps/ClientTest/: ExecuteAppConfig.ini  ModuleList.ini
DevOps/Scripts/: .Linux_CopyModules.sh.swo  CopyClient.bat  CopyModules.bat  CopyServer.bat  Linux_CopyModules.sh  Linux_CopyServer.sh  Linux_SOFileInitialize.sh  Linux_UpdateServer.sh  UpdateClient.bat  UpdateServer.bat
DevOps/ServerHolder/: ExecuteAppConfig.ini  ModuleList.ini
SourcePath/: CMakeLists.txt  Common.cmake  CoreInterface.cmake  ExecuteAble.cmake
SourcePath/ClientTest/: CMakeLists.txt  ClientCoreModuleInterfaceContainer.cpp  ClientCoreModuleInterfaceContainer.h  ClientDemoCore.cpp  ClientDemoCore.h  ClientTest.cpp  ExecuteIniConfigReader.h
SourcePath/CoreInterface/: ILogCore.h  IModuleCoreInterface.h  IModuleInterface.h  IModuleInterfaceContainer.h  IModuleLogicInterface.h  INetWorkCore.h  ISystemCore.h  ISystemHelper.h
SourcePath/LibTools/: CMakeLists.txt  ExecuteIniConfigReader.cpp  ExecuteIniConfigReader.h
SourcePath/ProtectedCore/LogCore/: CMakeLists.txt  LogThreadBase.cpp  Module.cpp  Module.h  SLC_LogCore.cpp  SLC_LogCore.h
SourcePath/ProtectedCore/NetWorkCore/: CMakeLists.txt  Module.cpp  Module.h  NetWorkCore.h
SourcePath/ProtectedCore/NetWorkCore/CommonDefine/: NetWorkCoreEnumDefine.h  SocketOperateDefine.cpp  SocketOperateDefine.h
SourcePath/ProtectedCore/NetWorkCore/LinuxNetWork/: NetWorkCore.cpp
SourcePath/ProtectedCore/NetWorkCore/WinNetWork/: NetWorkCore.cpp  WinICOPManager.cpp  WinICOPManager.h
SourcePath/ProtectedCore/NetWorkCore/WinNetWork/WinCompletionPort/: WinCompletionPortListener.h  WinCompletionPortQueue.cpp  WinCompletionPortQueue.h  WinCompletionPortWorker.cpp  WinCompletionPortWorker.h
SourcePath/ProtectedCore/SystemCore/: .CMakeLists.txt.swp  CMakeLists.txt  Module.cpp  SLC_SystemCore.cpp  SLC_SystemCore.h  SLC_SystemHelper.cpp  SLC_SystemHelper.h
SourcePath/PublicLib/: AdditionalMind.md  CMakeLists.txt
SourcePath/PublicLib/Include/Common/: LibThreadBase.h  LogThreadBase.h  StandardUnLockElement.h  TypeDefines.h  UnLockElementTypeDefine.h  UnLockQueue.h  Util.h  tools.h
SourcePath/PublicLib/Include/Linux/: LinuxFileSystem.h  LinuxTimeSystem.h
SourcePath/PublicLib/Include/System/: FileSystem.h  IniConfigFile.h  SystemMacros.h  TimeSystem.h
SourcePath/PublicLib/Include/Windows/: WindowsFileSystem.h  WindowsTimeSystem.h
SourcePath/PublicLib/SourceFile/Common/: LibThreadBase.cpp  LogThreadBase.cpp  StandardUnLockElement.cpp  UnLockQueue.cpp  Util.cpp  tools.cpp
SourcePath/PublicLib/SourceFile/Linux/: LinuxFileSystem.cpp
SourcePath/PublicLib/SourceFile/System/: FileSystem.cpp  IniConfigFile.cpp
SourcePath/PublicLib/SourceFile/Windows/: WindowsFileSystem.cpp
SourcePath/ServerHolder/: CMakeLists.txt  ServerCore.cpp  ServerCore.h  ServerCoreModuleInterfaceContainer.cpp  ServerCoreModuleInterfaceContainer.h  ServerHolder.cpp
